fixes contrast color on form social buttons

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1167,6 +1167,9 @@ table {
 .button.button-twitter,
 .button.button-facebook,
 .button.button-google {
+  background: white;
+  color: $text;
+  font-weight: bold;
   height: $line-height*2;
   line-height: $line-height*2;
   padding: 0;
@@ -1174,9 +1177,11 @@ table {
 }
 
 .button.button-twitter {
-  background: #45B0E3;
+  background: #ECF7FC;
+  border-left: 3px solid #45B0E3;
 
   &:before {
+    color: #45B0E3;
     content: "f";
     font-family: "icons" !important;
     font-size: rem-calc(24);
@@ -1214,9 +1219,11 @@ table {
 }
 
 .button.button-facebook {
-  background: #3B5998;
+  background: #EBEEF4;
+  border-left: 3px solid #3B5998;
 
   &:before {
+    color: #3B5998;
     content: "A";
     font-family: "icons" !important;
     font-size: rem-calc(24);
@@ -1254,9 +1261,11 @@ table {
 }
 
 .button.button-google {
-  background: #DE4C34;
+  background: #FCEDEA;
+  border-left: 3px solid #DE4C34;
 
   &:before {
+    color: #DE4C34;
     content: "B";
     font-family: "icons" !important;
     font-size: rem-calc(24);
